fixed spacing issues in layout

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -32,12 +32,14 @@
 .title{
   justify-content: center;
   display: flex;
+  margin-top: 20px;
 }
 
 .products{
 
   text-align: center;
   display: flex;
+  margin-top: 50px;
 }
 .productShowcase {
   display: flex;
